# multi-layer-convnet

./: CMakeLists.txt  README.md  Revision.md  config.txt
log1/: config.txt  result.txt  weight.txt
log1/layer_0/: conv_visualization .py  kernel_visualization.py
log1/layer_0/kernel_0/: ch_0.csv  sample_1.csv  sample_101.csv  sample_11.csv  sample_111.csv  sample_121.csv  sample_131.csv  sample_141.csv  sample_151.csv  sample_161.csv  sample_171.csv  sample_181.csv  sample_191.csv  sample_201.csv  sample_21.csv  sample_211.csv  sample_221.csv  sample_231.csv  sample_241.csv  sample_251.csv  sample_261.csv  sample_271.csv  sample_31.csv  sample_41.csv  sample_51.csv  sample_61.csv  sample_71.csv  sample_81.csv  sample_91.csv
log1/layer_0/kernel_1/: ch_0.csv  sample_1.csv  sample_101.csv  sample_11.csv  sample_111.csv  sample_121.csv  sample_131.csv  sample_141.csv  sample_151.csv  sample_161.csv  sample_171.csv  sample_181.csv  sample_191.csv  sample_201.csv  sample_21.csv  sample_211.csv  sample_221.csv  sample_231.csv  sample_241.csv  sample_251.csv  sample_261.csv  sample_271.csv  sample_31.csv  sample_41.csv  sample_51.csv  sample_61.csv  sample_71.csv  sample_81.csv  sample_91.csv
log1/layer_0/kernel_2/: ch_0.csv  sample_1.csv  sample_101.csv  sample_11.csv  sample_111.csv  sample_121.csv  (+23 more)
src/: convolution.cc  convolution.h  cost_gradient.cc  data_enlarge.cc  general_settings.h  get_sample.cc  read_data.cc  read_data.h  result_predict.cc  result_predict.h  sample.cc  save_weights.cc  save_weights.h  train_network.cc  train_network.h  weight_init.cc
(+203 files in other folders)
